Implemented Conversion from byte to abstract message representation and vice versa
Cleaned up some code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartActivity">
+        <activity android:name=".Start.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -18,7 +18,7 @@
         <activity
             android:name=".Controller.ControllerActivity"
             android:label="@string/title_activity_controller"
-            android:parentActivityName=".StartActivity"/>
+            android:parentActivityName=".Start.StartActivity"/>
     </application>
 
 </manifest>
