--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.felHR85:UsbSerial:4.5'
     testCompile 'junit:junit:4.12'
     compile files('libs/d2xx.jar')
     implementation 'com.google.guava:guava:16.0.1'
